@@ -122,4 +122,9 @@ Revision history for CatalystX-CRUD
 0.27    xxx
         * fix Controller->rm() to check for model_adapter() and call its delete() method as advertised.
         * check for length($oid) instead of defined($oid) in REST->default
+        * added CatalystX::CRUD::Results class
+        * added naked_results() config option to base Controller
+        * refactored base Controller to make all config options into accessors. added t/02-controller
+
+
 
